# octopusAI_Intelligence

backend/: .env  README.md  pyproject.toml  requirements.txt  smartbuy.db
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  migrations.py  seed.py
backend/app/db/models/: cart.py  conversation.py  deals.py  merchant.py  price_rule.py  price_snapshot.py  product.py  shopping_list.py  user.py
backend/app/routers/: admin.py  auth.py  cart.py  chat.py  deals.py  merchant.py  products.py  recommendations.py  rules.py  shopping_lists.py
backend/app/schemas/: auth.py  cart.py  chat.py  deals.py  products.py  rules.py  shopping_list.py
backend/app/services/: auth_service.py  background_jobs.py  cart_service.py  catalog_service.py  conversation_service.py  deal_service.py  deal_sync_service.py  image_resolver.py  recommendation_service.py  rules_service.py  scheduler.py  scraping_service.py  shopping_list_service.py
backend/app/services/aggregation/: __init__.py  base.py  service.py
backend/app/services/aggregation/adapters/: __init__.py  carrefour.py  naivas.py  quickmart.py
backend/app/services/ai/: __init__.py  chat_service.py  tools.py
backend/app/services/scrapers/: __init__.py  base.py  carrefour.py  copia.py  hotpoint.py  jumia_ke.py  kilimall.py  magento2.py  masoko.py  naivas.py  phone_place_kenya.py  quickmart.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx
frontend/src/components/: Dashboard.jsx  ErrorBoundary.jsx  Header.jsx
frontend/src/lib/: errors.js  format.js  pwa.js
frontend/src/stores/: authStore.js  cartStore.js  chatStore.js  compareStore.js
frontend/src/styles/: glass.css  theme.css
(+35 files in other folders)
